Set Interval Vue js

--- a/vuejs.html
+++ b/vuejs.html
@@ -14,12 +14,20 @@
     <script src="https://unpkg.com/vue@next"></script>
 
     <script>
+
+
       const Test = {
         data() {
           return {
             counter: 0,
           };
         },
+
+        mounted() {
+            setInterval( () => {
+                this.counter++
+            }, 1000)
+        }
       };
 
       Vue.createApp(Test).mount("#app");
