--- a/vuejs.html
+++ b/vuejs.html
@@ -9,8 +9,13 @@
 
   <body>
     <div id="app">
-      <input type="text" :value="message" v-model="message" />
-      <label for="">{{ message }}</label>
+      <input type="text"  v-model="message" />
+      <br>
+      <!-- <label for="" >{{ message }}</label> -->
+
+      <div v-text="message" > 
+         
+      </div>
     </div>
 
     <script src="https://unpkg.com/vue@next"></script>
@@ -21,7 +26,7 @@
 
         data() {
             return{
-                message : "davood"
+                message : "<h2>my name is davood</h2>"
             }
         },
 
